force-app/main/default/objects/SQRC__c/SQRC__c.object-meta.xml
<CustomObject>
    <label>SQRC</label>
    <nameField>
        <displayFormat>SQRCID-{00000000}</displayFormat>
        <label>SQD No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SQRC</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>