force-app/main/default/objects/SQRC__c/fields/Case_Created_by__c.field-meta.xml
<CustomField>
    <fullName>Case_Created_by__c</fullName>
    <formula>CASE(  Case_Number__r.Case_Record_Type__c  ,&quot;AOD - 01 Passenger Handling&quot;,&quot;AOD&quot;,&quot;AOD - 02 Baggage Handling&quot;,&quot;AOD&quot;,&quot;AOD - 03 Ground Operation (Non PAX Related)&quot;,&quot;AOD&quot;,&quot;AOD - 04 Administration (Headquarter Use Only)&quot;,&quot;AOD&quot;,&quot;Crew&quot;,&quot;CCD&quot;,&quot;Feedback&quot;,&quot;CED&quot;,&quot;Reservation and Ticketing&quot;,&quot;CED&quot;,&quot;Enquiry and Request&quot;,&quot;CED&quot;,&quot;N/A&quot;)</formula>
    <label>Case Created by</label>
    <type>Text</type>
</CustomField>