force-app/main/default/objects/SQRC__c/fields/Case_Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Created_Time__c</fullName>
    <formula>Case_Number__r.CreatedDate</formula>
    <label>Case Created Time</label>
    <type>DateTime</type>
</CustomField>