force-app/main/default/objects/SQRC__c/fields/Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type__c</fullName>
    <formula>Case_Number__r.Case_Record_Type__c</formula>
    <label>Case Record Type</label>
    <type>Text</type>
</CustomField>