force-app/main/default/objects/SQRC__c/fields/Case_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Type__c</fullName>
    <formula>Text(Case_Number__r.Case_Sub_type__c)</formula>
    <label>Case Sub Type</label>
    <type>Text</type>
</CustomField>