force-app/main/default/objects/SQRC__c/fields/Category_Details__c.field-meta.xml
<CustomField>
    <fullName>Category_Details__c</fullName>
    <label>Category Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SQD_Sub_subcategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spilling Issues</fullName>
            </value>
            <value>
                <fullName>Meal Delivery Issues</fullName>
            </value>
            <value>
                <fullName>Passenger Injury</fullName>
            </value>
            <value>
                <fullName>Failure to Follow Procedures</fullName>
            </value>
            <value>
                <fullName>Service Efficiency</fullName>
            </value>
            <value>
                <fullName>Communication Skills/ Service Knowledge</fullName>
            </value>
            <value>
                <fullName>Irregular Incident Handling</fullName>
            </value>
            <value>
                <fullName>Cutlery/ Cup Related Issues</fullName>
            </value>
            <value>
                <fullName>Linen Related Issues</fullName>
            </value>
            <value>
                <fullName>Wi-Fi not Available</fullName>
            </value>
            <value>
                <fullName>Personal Devices Not Available</fullName>
            </value>
            <value>
                <fullName>IFE Function</fullName>
            </value>
            <value>
                <fullName>IFE Contents Related Issues</fullName>
            </value>
            <value>
                <fullName>IFE Menu</fullName>
            </value>
            <value>
                <fullName>IFE Related Equipment</fullName>
            </value>
            <value>
                <fullName>Broadcast Equipment-Related</fullName>
            </value>
            <value>
                <fullName>Tray Table Function</fullName>
            </value>
            <value>
                <fullName>Seat Function</fullName>
            </value>
            <value>
                <fullName>Sliding Door Function</fullName>
            </value>
            <value>
                <fullName>Reading Light/ Call Bell INOP</fullName>
            </value>
            <value>
                <fullName>Charging Equipment</fullName>
            </value>
            <value>
                <fullName>Lavatory Equipment</fullName>
            </value>
            <value>
                <fullName>POS Machine Issues</fullName>
            </value>
            <value>
                <fullName>Duty Free Product Quality</fullName>
            </value>
            <value>
                <fullName>Insufficient Item</fullName>
                <label>Incorrect Quantity</label>
            </value>
            <value>
                <fullName>Headset Related Issues</fullName>
            </value>
            <value>
                <fullName>Blanket Related Issues</fullName>
            </value>
            <value>
                <fullName>Pijama/ Pillow/ Amenity kit</fullName>
            </value>
            <value>
                <fullName>Toiletries</fullName>
            </value>
            <value>
                <fullName>Playing Cards/ Toys</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>