force-app/main/default/objects/SQRC__c/fields/COSMILE_Number__c.field-meta.xml
<CustomField>
    <fullName>COSMILE_Number__c</fullName>
    <formula>Case_Number__r.Membership_No__c</formula>
    <label>COSMILE Number</label>
    <type>Text</type>
</CustomField>