force-app/main/default/objects/SQRC__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <formula>Case_Number__r.SuppliedEmail</formula>
    <label>Email Address</label>
    <type>Text</type>
</CustomField>