force-app/main/default/objects/SQRC__c/fields/First_Class__c.field-meta.xml
<CustomField>
    <fullName>First_Class__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Class</label>
    <type>Checkbox</type>
</CustomField>