force-app/main/default/objects/SQRC__c/fields/Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>Flight_Date__c</fullName>
    <formula>Case_Number__r.Flight_Date__c</formula>
    <label>Flight Date</label>
    <type>Date</type>
</CustomField>