force-app/main/default/objects/SQRC__c/fields/Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number__c</fullName>
    <formula>Case_Number__r.Flight_Number__c</formula>
    <label>Flight Number</label>
    <type>Text</type>
</CustomField>