force-app/main/default/objects/SQRC__c/fields/Flight_Sector__c.field-meta.xml
<CustomField>
    <fullName>Flight_Sector__c</fullName>
    <formula>Case_Number__r.Flight_Sector__c</formula>
    <label>Flight Sector</label>
    <type>Text</type>
</CustomField>