force-app/main/default/objects/SQRC__c/fields/Handling_Agent__c.field-meta.xml
<CustomField>
    <fullName>Handling_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Handling Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SQRC</relationshipName>
    <type>Lookup</type>
</CustomField>