force-app/main/default/objects/SQRC__c/fields/Key_Achievements__c.field-meta.xml
<CustomField>
    <fullName>Key_Achievements__c</fullName>
    <label>Key Achievements</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>