force-app/main/default/objects/SQRC__c/fields/mail__c.field-meta.xml
<CustomField>
    <fullName>mail__c</fullName>
    <label>mail</label>
    <type>Email</type>
</CustomField>