force-app/main/default/objects/SQRC__c/fields/On_hold_Time__c.field-meta.xml
<CustomField>
    <fullName>On_hold_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On-hold Time</label>
    <type>Checkbox</type>
</CustomField>