force-app/main/default/objects/SQRC__c/fields/Original_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Original_Case_Status__c</fullName>
    <formula>Text(Case_Number__r.Status)</formula>
    <label>Original Case Status</label>
    <type>Text</type>
</CustomField>