force-app/main/default/objects/SQRC__c/fields/Owner_Department__c.field-meta.xml
<CustomField>
    <fullName>Owner_Department__c</fullName>
    <label>Owner Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AOD</fullName>
            </value>
            <value>
                <fullName>CCD</fullName>
            </value>
            <value>
                <fullName>CED</fullName>
            </value>
            <value>
                <fullName>CGD</fullName>
            </value>
            <value>
                <fullName>CPD</fullName>
            </value>
            <value>
                <fullName>CRD</fullName>
            </value>
            <value>
                <fullName>CSD</fullName>
            </value>
            <value>
                <fullName>EMD</fullName>
            </value>
            <value>
                <fullName>FOD</fullName>
            </value>
            <value>
                <fullName>GAD</fullName>
            </value>
            <value>
                <fullName>GHD</fullName>
            </value>
            <value>
                <fullName>ITD</fullName>
            </value>
            <value>
                <fullName>LID</fullName>
            </value>
            <value>
                <fullName>PCD</fullName>
            </value>
            <value>
                <fullName>PMD</fullName>
            </value>
            <value>
                <fullName>SQD</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>Unattributable</fullName>
            </value>
            <value>
                <fullName>BKKKK</fullName>
                <isActive>false</isActive>
                <label>BKKKK</label>
            </value>
            <value>
                <fullName>CEBKK</fullName>
                <isActive>false</isActive>
                <label>CEBKK</label>
            </value>
            <value>
                <fullName>CTSKK</fullName>
                <isActive>false</isActive>
                <label>CTSKK</label>
            </value>
            <value>
                <fullName>DADKK</fullName>
                <isActive>false</isActive>
                <label>DADKK</label>
            </value>
            <value>
                <fullName>FUKKK</fullName>
                <isActive>false</isActive>
                <label>FUKKK</label>
            </value>
            <value>
                <fullName>HANKK</fullName>
                <isActive>false</isActive>
                <label>HANKK</label>
            </value>
            <value>
                <fullName>KHHKK</fullName>
                <isActive>false</isActive>
                <label>KHHKK</label>
            </value>
            <value>
                <fullName>KIXKK</fullName>
                <isActive>false</isActive>
                <label>KIXKK</label>
            </value>
            <value>
                <fullName>KULKK</fullName>
                <isActive>false</isActive>
                <label>KULKK</label>
            </value>
            <value>
                <fullName>LAXKK</fullName>
                <isActive>false</isActive>
                <label>LAXKK</label>
            </value>
            <value>
                <fullName>MFMKK</fullName>
                <isActive>false</isActive>
                <label>MFMKK</label>
            </value>
            <value>
                <fullName>MNLKK</fullName>
                <isActive>false</isActive>
                <label>MNLKK</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>