force-app/main/default/objects/SQRC__c/fields/Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case__c</fullName>
    <formula>If(Case_Number__r.Parent.CaseNumber=&quot;0&quot;,&quot;&quot;,Case_Number__r.Parent.CaseNumber)</formula>
    <label>Parent Case</label>
    <type>Text</type>
</CustomField>