force-app/main/default/objects/SQRC__c/fields/Passenger_Name__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Name__c</fullName>
    <formula>Case_Number__r.Passenger_Name__c</formula>
    <label>Passenger Name</label>
    <type>Text</type>
</CustomField>