force-app/main/default/objects/SQRC__c/fields/Passenger_Seat_Number__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Seat_Number__c</fullName>
    <formula>Case_Number__r.PAX_Seat_No__c</formula>
    <label>Passenger Seat Number</label>
    <type>Text</type>
</CustomField>