force-app/main/default/objects/SQRC__c/fields/Passenger_Title__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Title__c</fullName>
    <formula>Text(Case_Number__r.Passenger_Title__c)</formula>
    <label>Passenger Title</label>
    <type>Text</type>
</CustomField>