force-app/main/default/objects/SQRC__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <formula>Case_Number__r.SuppliedPhone</formula>
    <label>Phone Number</label>
    <type>Text</type>
</CustomField>