force-app/main/default/objects/SQRC__c/fields/PMD_Agent_s_Conclusion__c.field-meta.xml
<CustomField>
    <fullName>PMD_Agent_s_Conclusion__c</fullName>
    <label>PMD Agent&apos;s Conclusion</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>