force-app/main/default/objects/SQRC__c/fields/PNR__c.field-meta.xml
<CustomField>
    <fullName>PNR__c</fullName>
    <formula>Case_Number__r.Booking_Reference_PNR__c</formula>
    <label>PNR</label>
    <type>Text</type>
</CustomField>