force-app/main/default/objects/SQRC__c/fields/Report_Station__c.field-meta.xml
<CustomField>
    <fullName>Report_Station__c</fullName>
    <formula>Text(Case_Number__r.Case_Report_Station__c)</formula>
    <label>Report Station</label>
    <type>Text</type>
</CustomField>