force-app/main/default/objects/SQRC__c/fields/SQD_Approval__c.field-meta.xml
<CustomField>
    <fullName>SQD_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SQD Approval</label>
    <type>Checkbox</type>
</CustomField>