force-app/main/default/objects/SQRC__c/fields/SQD_Category__c.field-meta.xml
<CustomField>
    <fullName>SQD_Category__c</fullName>
    <label>SQD Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Compliment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>