force-app/main/default/objects/SQRC__c/fields/SQD_Conclusion__c.field-meta.xml
<CustomField>
    <fullName>SQD_Conclusion__c</fullName>
    <label>SQD Conclusion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enhancement Type I</fullName>
            </value>
            <value>
                <fullName>Enhancement Type II</fullName>
            </value>
            <value>
                <fullName>Compliment</fullName>
            </value>
            <value>
                <fullName>General Enquiry</fullName>
            </value>
            <value>
                <fullName>Personal Opinion</fullName>
            </value>
            <value>
                <fullName>Tracking</fullName>
            </value>
            <value>
                <fullName>Optimize-External</fullName>
            </value>
            <value>
                <fullName>Optimize-Internal</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
            <value>
                <fullName>Station/Crew Report</fullName>
            </value>
            <value>
                <fullName>Duplicated</fullName>
            </value>
            <value>
                <fullName>Unattributable</fullName>
            </value>
            <value>
                <fullName>Pending for Disscussion</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>D</fullName>
                <isActive>false</isActive>
                <label>D</label>
            </value>
            <value>
                <fullName>E</fullName>
                <isActive>false</isActive>
                <label>E</label>
            </value>
            <value>
                <fullName>F</fullName>
                <isActive>false</isActive>
                <label>F</label>
            </value>
            <value>
                <fullName>I</fullName>
                <isActive>false</isActive>
                <label>I</label>
            </value>
            <value>
                <fullName>M</fullName>
                <isActive>false</isActive>
                <label>M</label>
            </value>
            <value>
                <fullName>O</fullName>
                <isActive>false</isActive>
                <label>O</label>
            </value>
            <value>
                <fullName>Pending  for Disscussion</fullName>
                <isActive>false</isActive>
                <label>Pending  for Disscussion</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>