force-app/main/default/objects/SQRC__c/fields/SQD_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>SQD_Sub_Category__c</fullName>
    <label>SQD Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flight Irregularities</fullName>
            </value>
            <value>
                <fullName>Reservation and Ticketing</fullName>
            </value>
            <value>
                <fullName>Airport Services</fullName>
            </value>
            <value>
                <fullName>Cabin Services and Onboard Product</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>