force-app/main/default/objects/SQRC__c/fields/SQD_Sub_subcategory__c.field-meta.xml
<CustomField>
    <fullName>SQD_Sub_subcategory__c</fullName>
    <label>SQD Sub-subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SQD_Sub_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>FLT DLY/CXL - Late Notice</fullName>
            </value>
            <value>
                <fullName>FLT DLY/CXL - Insufficient INFO</fullName>
            </value>
            <value>
                <fullName>FLT DLY/CXL - Compensation Policy</fullName>
            </value>
            <value>
                <fullName>SHD CHG - Late Notice</fullName>
            </value>
            <value>
                <fullName>SHD CHG - Insufficient INFO</fullName>
            </value>
            <value>
                <fullName>SHD CHG - Compensation Policy</fullName>
            </value>
            <value>
                <fullName>A/C CHG - Late Notice</fullName>
            </value>
            <value>
                <fullName>A/C CHG - Insufficient INFO</fullName>
            </value>
            <value>
                <fullName>A/C CHG - Compensation Policy</fullName>
            </value>
            <value>
                <fullName>General Ticketing and Reservation​</fullName>
            </value>
            <value>
                <fullName>Pre-assigned Seat/Meal​</fullName>
            </value>
            <value>
                <fullName>Pre-order Product/Service​</fullName>
            </value>
            <value>
                <fullName>Refund/Service Fee​</fullName>
            </value>
            <value>
                <fullName>On-hold Time</fullName>
            </value>
            <value>
                <fullName>Staff Attitude – Customer Service Center​</fullName>
            </value>
            <value>
                <fullName>Mishandled Baggage</fullName>
            </value>
            <value>
                <fullName>Other Bag Issues​/Lost and Found</fullName>
            </value>
            <value>
                <fullName>Check-in Procedures​</fullName>
            </value>
            <value>
                <fullName>Seat Arrangement​</fullName>
            </value>
            <value>
                <fullName>Documentation​</fullName>
            </value>
            <value>
                <fullName>Ticketing Handling​</fullName>
            </value>
            <value>
                <fullName>Lounge Services​</fullName>
            </value>
            <value>
                <fullName>Boarding Services​</fullName>
            </value>
            <value>
                <fullName>Transfer/Transit Issues​</fullName>
            </value>
            <value>
                <fullName>Staff Attitude – Airport​</fullName>
            </value>
            <value>
                <fullName>Special Request/Services Handling​</fullName>
            </value>
            <value>
                <fullName>Denied Boarding/Offloading​</fullName>
            </value>
            <value>
                <fullName>Irregular Flight Handling​</fullName>
            </value>
            <value>
                <fullName>Involuntary Downgrade​</fullName>
            </value>
            <value>
                <fullName>System Errors​</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>