force-app/main/default/objects/SQRC__c/fields/SQRC_Case__c.field-meta.xml
<CustomField>
    <fullName>SQRC_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SQRC Case</label>
    <type>Checkbox</type>
</CustomField>