force-app/main/default/objects/SQRC__c/fields/SQRC_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>SQRC_Close_Date__c</fullName>
    <label>SQRC Close Date</label>
    <type>DateTime</type>
</CustomField>