force-app/main/default/objects/SQRC__c/fields/SQRC_Duration__c.field-meta.xml
<CustomField>
    <fullName>SQRC_Duration__c</fullName>
    <inlineHelpText>Unit = day</inlineHelpText>
    <label>SQRC Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>