force-app/main/default/objects/SQRC__c/fields/SQRC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SQRC_Start_Date__c</fullName>
    <label>SQRC Start Date</label>
    <type>DateTime</type>
</CustomField>