force-app/main/default/objects/SQRC__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unread</fullName>
            </value>
            <value>
                <fullName>Investigating</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>In Progess</fullName>
                <isActive>false</isActive>
                <label>In Progess</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Optimizing</fullName>
                <isActive>false</isActive>
                <label>Optimizing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>