force-app/main/default/objects/SQRC__c/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <formula>Case_Number__r.Ticket_EMD_Number__c</formula>
    <label>Ticket Number</label>
    <type>Text</type>
</CustomField>