force-app/main/default/objects/SQRC__c/fields/VIP_Info_Exist__c.field-meta.xml
<CustomField>
    <fullName>VIP_Info_Exist__c</fullName>
    <formula>Case_Number__r.VIP_Info_Count__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Info Exist</label>
    <type>Checkbox</type>
</CustomField>