force-app/main/default/objects/SQRC__c/listViews/SQD_Master_List.listView-meta.xml
<ListView>
    <fullName>SQD_Master_List</fullName>
    <columns>NAME</columns>
    <columns>Case_Number__c</columns>
    <columns>Case_Created_Time__c</columns>
    <columns>Status__c</columns>
    <columns>Owner_Department__c</columns>
    <columns>SQD_Conclusion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case_Created_Time__c</field>
        <operation>notEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Case_Created_Time__c</field>
        <operation>greaterOrEqual</operation>
        <value>6/1/2023 12:00 AM</value>
    </filters>
    <label>SQD Master List</label>
    <sharedTo>
        <role>SQD</role>
    </sharedTo>
</ListView>